--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,14 @@
 version: '3.7'
 
 services:
+
+    client:
+      build: ../CI-CD-Frontend
+      image: frontend-image
+      container_name: frontend-container
+      ports:
+        - "80:80"
+        
     webapp-server:
       build:
         context: .
