put files into dirs

--- a/Docker/Docker-Backend/Dockerfile
+++ b/Docker/Docker-Backend/Dockerfile
@@ -1,17 +1,16 @@
-#  Dockerfile for Node Express Backend api (development)
-
 FROM node:10.16-alpine
-
-# ARG NODE_ENV=development
 
 # Create App Directory
 RUN mkdir -p /usr/src/schoolapp
+
+# Change the working directory
 WORKDIR /usr/src/schoolapp
 
-# Install Dependencies
+# Copy package.json 
 COPY package*.json ./
 
-
+# Install all exact version 
+# dependencies from the package-lock
 RUN npm ci
 
 # Copy app source code
@@ -19,4 +18,7 @@ COPY . .
 
 # Exports
 EXPOSE 8080
+
+# Executed this command 
+# when the Docker container start
 CMD ["npm","start"]
